--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,9 @@
 .App {
   text-align: center;
+  color: #1f1f1f;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.Header {
+#Logo-Div {
   text-align: left;
   display: flex;
   align-items: center;
@@ -47,10 +13,32 @@
 .Header-Img {
   padding-left: 8px;
   padding-right: 8px;
-  height: 40px;
+  height: 5vh;
 }
 
 .Header-Text {
   font-size: x-large;
+  color: #1f1f1f;
+}
+
+#Navbar {
+  font-size: medium;
+  display: flex;
+  border-top: 2px solid #1f1f1f;
+  border-bottom: 2px solid #1f1f1f;
+  justify-content: space-evenly;
+  height: 4vh;
+  align-items: center;
+  background-color: #1f1f1f;
+  margin-bottom: 1vh;
+}
+
+#Navbar button {
+  border: 2px solid #1f1f1f;
+  border-radius: 6px;
+  font-size: medium;
+  width: 10em;
+  padding: 1%;
+  background-color: white;
   color: #1f1f1f;
 }
