--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,40 @@
   background-color: white;
   color: #1f1f1f;
 }
+
+#Login-Div {
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid #1f1f1f;
+  border-radius: 6px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 140px;
+}
+
+.Input-Header {
+  font-size: large;
+}
+
+.Input-Div {
+  display: flex;
+  justify-content: space-between;
+}
+
+#Register-Div {
+  width: 340px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid #1f1f1f;
+  border-radius: 6px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 230px;
+}
